@@ -54,6 +54,7 @@ class TrackSettingsModel : public QObject
     Q_PROPERTY(int transpose READ transpose WRITE setTranspose NOTIFY transposeChanged)
     Q_PROPERTY(int velocityJitter READ velocityJitter WRITE setVelocityJitter NOTIFY velocityJitterChanged)
     Q_PROPERTY(int velocityKeyTrack READ velocityKeyTrack WRITE setVelocityKeyTrack NOTIFY velocityKeyTrackChanged)
+    Q_PROPERTY(int velocityKeyTrackOffset READ velocityKeyTrackOffset WRITE setVelocityKeyTrackOffset NOTIFY velocityKeyTrackOffsetChanged)
     Q_PROPERTY(int autoNoteOffOffset READ autoNoteOffOffset WRITE setAutoNoteOffOffset NOTIFY autoNoteOffOffsetChanged)
     Q_PROPERTY(bool autoNoteOffOffsetEnabled READ autoNoteOffOffsetEnabled WRITE setAutoNoteOffOffsetEnabled NOTIFY autoNoteOffOffsetEnabledChanged)
     
@@ -122,6 +123,8 @@ public:
     void setVelocityJitter(int velocityJitter);
     int velocityKeyTrack() const;
     void setVelocityKeyTrack(int velocityKeyTrack);
+    int velocityKeyTrackOffset() const;
+    void setVelocityKeyTrackOffset(int velocityKeyTrackOffset);
     int autoNoteOffOffset() const;
     void setAutoNoteOffOffset(int autoNoteOffOffset);
     bool autoNoteOffOffsetEnabled() const;
@@ -167,6 +170,7 @@ signals:
     void transposeChanged();
     void velocityJitterChanged();
     void velocityKeyTrackChanged();
+    void velocityKeyTrackOffsetChanged();
     void autoNoteOffOffsetChanged();
     void autoNoteOffOffsetEnabledChanged();
 
@@ -204,6 +208,7 @@ private:
     {
         int velocityJitter { 0 };
         int velocityKeyTrack { 0 };
+        int velocityKeyTrackOffset { 0 };
     };
 
     MidiEffectSettings m_midiEffectSettings;
