@@ -160,7 +160,7 @@ void ApplicationService::requestLiveNoteOn(quint8 key, quint8 octave, quint8 vel
     if (const auto instrument = m_editorService->instrument(m_editorService->position().track); instrument) {
         if (const auto midiNote = NoteConverter::keyAndOctaveToMidiNote(key, octave, instrument->settings().transpose); midiNote.has_value()) {
             juzzlin::L(TAG).debug() << "Live note ON " << midiNote->first << " requested on instrument " << instrument->toString().toStdString();
-            const auto scaledVelocity = Utils::Midi::scaleVelocityByKey(velocity, midiNote->second, instrument->settings().midiEffects.velocityKeyTrack);
+            const auto scaledVelocity = Utils::Midi::scaleVelocityByKey(velocity, midiNote->second, instrument->settings().midiEffects.velocityKeyTrack, instrument->settings().midiEffects.velocityKeyTrackOffset);
             emit liveNoteOnRequested(instrument, { midiNote->second, scaledVelocity });
         }
     } else {
