@@ -7,6 +7,8 @@ New features:
 
 * Add option to disable UI updates during playback
 
+* Add velocity key track visualization and offset
+
 Bug fixes:
 
 Other:
